# jamshalat_desktop_app

./: .gitignore  ANDROID_BUILD.md  GITHUB_ACTIONS_SETUP.md  ICON_REQUIREMENTS.md  MOBILE_SETUP.md  README.md  android-release-key.jks  generate-android-icons.sh  index.html  package-lock.json  package.json  setup-mobile.sh  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
public/: icon.icns
src/: App.tsx  App.tsx.corrupted  api.ts  main.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: DateTimeDisplay.tsx  ErrorBoundary.tsx  LocationHeader.tsx  MainContent.tsx  PrayerSchedule.tsx  SearchableSelect.tsx  SettingsModal.tsx
src/components/settings/: AboutSettings.tsx  AppearanceSettings.tsx  ImageSettings.tsx  LocationSettings.tsx
src/hooks/: useAppSettings.ts  useClock.ts  useDynamicBackground.ts  usePrayerData.ts
src/types/: settings.ts
