[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.0.0-beta.19", features = ["custom-protocol"] }
tauri-plugin-log = "=2.0.0-beta.19"
# Mobile-specific plugins
tauri-plugin-shell = { version = "=2.0.0-beta.19", optional = true }
tauri-plugin-fs = { version = "=2.0.0-beta.19", optional = true }
tauri-plugin-dialog = { version = "=2.0.0-beta.19", optional = true }

[features]
# by default Tauri builds for the desktop platforms
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
mobile = [
  "tauri/mobile",
  "tauri-plugin-shell",
  "tauri-plugin-fs",
  "tauri-plugin-dialog"
]
