[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "^2.0.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# The 'mobile' feature is enabled automatically by the CLI based on the build target.
tauri = { version = "^2.0.0", features = ["custom-protocol"] }
tauri-plugin-log = "^2.0.0"
tauri-plugin-shell = "^2.0.0"
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
